chore: index page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Spidey's Fan Page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Main Page</title>
 </head>
@@ -11,9 +12,9 @@
     <h1>Spiderman's Fan Page</h1>
     <nav>
       <ul>
-        <li><a href="#appearances">Appearances</a></li>
-        <li><a href="#origin-story">Origin &amp; Story</a></li>
-        <li><a href="#newsletter">Newsletter</a></li>
+        <li><a href="./html/filmography.html">Appearances</a></li>
+        <li><a href="./html/origin.html">Origin &amp; Story</a></li>
+        <li><a href="./html/newsletter.html">Newsletter</a></li>
       </ul>
     </nav>
   </header>
@@ -31,17 +32,38 @@
 
     <section id="origin-story">
       <h2>Origin &amp; Story</h2>
-      <!-- Add the Origin & Story content here -->
+      <figure class="figure">
+        <img src="./img/spiderman-bite-1590787974344_160w.jpg" alt="the mutated spider biting peter parker's hand">
+        <figcaption>Peter Parker getting bitten by the mutated spider</figcaption>
+      </figure>
+      <br>
+      <p>Check <a href="./html/origin.html">this</a> section to know more about the origin story of Spidey!</p>
     </section>
 
     <section id="newsletter">
       <h2>Newsletter</h2>
-      <!-- Add the Newsletter content here -->
+      <figure class="figure">
+        <img src="./img/FY25rd3VQAAaBaI.jpg" alt="Into the spiderverse">
+        <figcaption>Spidey in "Into the spiderverse"</figcaption>
+      </figure>
+      <br>
+      <p>Check <a href="./html/filmography.html">this</a> section in order to get a complete list of your friendly neighborhood spider-man's audio-visual appearences!</p>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2023 Spiderman Fan Page. All rights reserved.</p>
+    <section id="social">
+      <a href="https://www.facebook.com/spiderman" target="_blank" rel="noopener noreferrer">
+        <img src="./img/facebook.png" alt="facebook">
+      </a>
+      <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
+        <img src="./img/instagram.png" alt="instagram">
+      </a>
+      <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
+        <img src="./img/twitter.png" alt="instagram">
+      </a>
+    </section>
   </footer>
 </body>
 </html>
