feat: main page completed, feat: template section pages ready for edit.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Metadata -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Spidey's Fan Page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./index.css">
+  <!-- Title -->
   <title>Main Page</title>
 </head>
 <body>
   <header>
+    <img src="./img/spidey.png" alt="spidey's logo">
     <h1>Spiderman's Fan Page</h1>
     <nav>
       <ul>
         <li><a href="./html/filmography.html">Appearances</a></li>
-        <li><a href="./html/origin.html">Origin &amp; Story</a></li>
+        <li><a href="./html/origin.html">Origin and Story</a></li>
         <li><a href="./html/newsletter.html">Newsletter</a></li>
       </ul>
     </nav>
@@ -33,7 +42,7 @@
     <section id="origin-story">
       <h2>Origin &amp; Story</h2>
       <figure class="figure">
-        <img src="./img/spiderman-bite-1590787974344_160w.jpg" alt="the mutated spider biting peter parker's hand">
+        <img src="./img/spiderman-bite-1590787974344_160w.jpg" alt="the mutated spider biting peter parker's hand" id="sting">
         <figcaption>Peter Parker getting bitten by the mutated spider</figcaption>
       </figure>
       <br>
@@ -43,11 +52,11 @@
     <section id="newsletter">
       <h2>Newsletter</h2>
       <figure class="figure">
-        <img src="./img/FY25rd3VQAAaBaI.jpg" alt="Into the spiderverse">
-        <figcaption>Spidey in "Into the spiderverse"</figcaption>
+        <img src="./img/FY25rd3VQAAaBaI.jpg" alt="peter parker signing some papers" id="sign">
+        <figcaption>Join our newsleterr!</figcaption>
       </figure>
       <br>
-      <p>Check <a href="./html/filmography.html">this</a> section in order to get a complete list of your friendly neighborhood spider-man's audio-visual appearences!</p>
+      <p>Check <a href="./html/filmography.html">this</a> section to join our mailing list, and keep updated with Spidey's latest adventures!</p>
     </section>
   </main>
 
