--- a/html/filmography.html
+++ b/html/filmography.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Metadata -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Spidey's Fan Page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/filmography.css">
+  <!-- Title -->
+  <title>Appeareces</title>
 </head>
 <body>
-  
+  <header>
+    <img src="./img/spidey.png" alt="spidey's logo">
+    <h1>Spiderman's Fan Page</h1>
+    <nav>
+      <ul>
+        <li><a href="../html/filmography.html">Appearances</a></li>
+        <li><a href="../html/origin.html">Origin and Story</a></li>
+        <li><a href="../html/newsletter.html">Newsletter</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Spiderman Fan Page. All rights reserved.</p>
+    <section id="social">
+      <a href="https://www.facebook.com/spiderman" target="_blank" rel="noopener noreferrer">
+        <img src="../img/facebook.png" alt="facebook">
+      </a>
+      <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
+        <img src="../img/instagram.png" alt="instagram">
+      </a>
+      <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
+        <img src="../img/twitter.png" alt="instagram">
+      </a>
+    </section>
+  </footer>
 </body>
 </html>
