--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <!--CSS-->
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./index.css">
   <title>Main page</title>
 </head>
 <body>
@@ -25,7 +25,9 @@
         <li><a href="#news">News</a></li>
       </ul>
     </nav>
-    <img src="./img/Marvel_Logo.svg.png" alt="">
+    <a href="https://www.marvel.com/" target="_blank" rel="noopener noreferrer">
+      <img src="./img/Marvel_Logo.svg.png" alt="Marvel_Logo">
+    </a>
   </header>
   
   <main>
@@ -181,9 +183,15 @@
   <footer>
     <p>&copy; 2023 Spider-Man Fan Page. All rights reserved.</p>
     <div class="logo-container">
-      <img src="./img/instagram.png" alt="spidey's instagram page">
-      <img src="./img/twitter.png" alt="spidey's twitter page">
-      <img src="./img/facebook.png" alt="spidey's facebook page">
+      <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
+        <img src="./img/instagram.png" alt="spidey's instagram page">
+      </a>
+      <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
+        <img src="./img/twitter.png" alt="spidey's twitter page">
+      </a>
+      <a href="https://www.facebook.com/spiderman" target="_blank" rel="noopener noreferrer">        
+        <img src="./img/facebook.png" alt="spidey's facebook page">
+      </a>
     </div>
   </footer>
 </body>
