--- a/index.html
+++ b/index.html
@@ -128,27 +128,27 @@
       <div class="image-gallery">
         <figure>
           <img src="./img/amazing-spiderman.jpg" alt="comic 1">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Amazing spiderman #1</figcaption>
         </figure>
         <figure>
           <img src="./img/amazing-spiderman-2.jpg" alt="comic 2">
-          <figcaption>Sinister Six</figcaption>
+          <figcaption>Amazing spiderman #2</figcaption>
         </figure>
         <figure>
           <img src="./img/amazing-spiderman-3.jpg" alt="comic 3">
-          <figcaption>Spider-man (psx)</figcaption>
+          <figcaption>Amazing spiderman #3</figcaption>
         </figure>
         <figure>
           <img src="./img/peter-parker.jpg" alt="comic 4">
-          <figcaption>Ultimate Spider-Man</figcaption>
+          <figcaption>Peter Parker's Spiderman #1</figcaption>
         </figure>
         <figure>
           <img src="./img/peter-parker-2.jpg" alt="comic 5">
-          <figcaption>Miles Morales</figcaption>
+          <figcaption>Peter Parker's Spiderman #2</figcaption>
         </figure>
         <figure>
           <img src="./img/peter-parker-3.jpg" alt="comic 6">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Peter Parker's Spiderman #3</figcaption>
         </figure>
         <figure>
           <img src="./img/spider-man-166.jpg" alt="comic 7">
@@ -156,19 +156,19 @@
         </figure>
         <figure>
           <img src="./img/spider-man-167.jpg" alt="comic 8">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Spider-Man issue 167</figcaption>
         </figure>
         <figure>
           <img src="./img/spider-man-190.jpg" alt="comic 9">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Spider-Man issue 190</figcaption>
         </figure>
         <figure>
           <img src="./img/web-of-spiderman-2.jpg" alt="comic 10">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Web of Spider-Man #2</figcaption>
         </figure>
         <figure>
           <img src="./img/web-of-spiderman-3.jpg" alt="comic 11">
-          <figcaption>Separation anxiety</figcaption>
+          <figcaption>Web of Spider-Man #3</figcaption>
         </figure>
         <figure id="last">
           <a href="./html/comics.html" target="_blank">
