--- a/html/news.html
+++ b/html/news.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <h1>Spider-Man Fan Page</h1>
+    <a href="../index.html"><h1>Spider-Man Fan Page</h1></a>
     <nav class="main-nav">
       <ul>
         <li><a href="#characters">Characters</a></li>
