feature: corrected navigability

--- a/html/comics.html
+++ b/html/comics.html
@@ -19,10 +19,10 @@
     <a href="../index.html"><h1>Spider-Man Fan Page</h1></a>
     <nav class="main-nav">
       <ul>
-        <li><a href="#characters">Characters</a></li>
-        <li><a href="#comics">Comics</a></li>
-        <li><a href="#games">Games</a></li>
-        <li><a href="#news">News</a></li>
+        <li><a href="./characters.html">Characters</a></li>
+        <li aria-current="true"><a href="./comics.html">Comics</a></li>
+        <li><a href="./games.html">Games</a></li>
+        <li><a href="./news.html">News</a></li>
       </ul>
     </nav>
     <a href="https://www.marvel.com/" target="_blank" rel="noopener noreferrer">
