--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <h1>Spider-Man Fan Page</h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="#characters">Characters</a></li>
-        <li><a href="#comics">Comics</a></li>
-        <li><a href="#games">Games</a></li>
-        <li><a href="#news">News</a></li>
+        <li><a href="./html/characters.html">Characters</a></li>
+        <li><a href="./html/comics.html">Comics</a></li>
+        <li><a href="./html/games.html">Games</a></li>
+        <li><a href="./html/news.html">News</a></li>
       </ul>
     </nav>
     <a href="https://www.marvel.com/" target="_blank" rel="noopener noreferrer">
