fix: incorrect src path

--- a/html/news.html
+++ b/html/news.html
@@ -46,7 +46,7 @@
     <p>&copy; 2023 Spider-Man Fan Page. All rights reserved.</p>
     <div class="logo-container">
       <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
-        <img src="-./img/instagram.png" alt="spidey's instagram page">
+        <img src="../img/instagram.png" alt="spidey's instagram page">
       </a>
       <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
         <img src="../img/twitter.png" alt="spidey's twitter page">
