fix: changed some minor styles and added a favicon

--- a/html/comics.html
+++ b/html/comics.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <!--CSS-->
   <link rel="stylesheet" href="../css/comics.css">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <title>Comic books</title>
 </head>
 <body>
