--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <!--CSS-->
   <link rel="stylesheet" href="./index.css">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <title>Main page</title>
 </head>
 <body>
