fix: changed an anchor href to the videogames section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <figcaption>Miles Morales</figcaption>
           </figure>
           <figure id="last">
-            <a href="./html/characters.html" target="_blank">
+            <a href="./html/games.html" target="_blank">
               <img src="./img/arrow.png" alt="see more">
               <figcaption>More:</figcaption>
             </a>
