feature: add games list to games section

--- a/html/games.html
+++ b/html/games.html
@@ -34,11 +34,270 @@
   <main>
     <section class="hero-section">
       <div class="hero-content">
-        <h2>Welcome to the Amazing World of Spider-Man!</h2>
-        <p>Explore the thrilling adventures of your friendly neighborhood hero.</p>
-        <a href="#info" class="cta-button">Learn More</a>
+        <h2>Games ahoy!</h2>
+        <p>Delight yourself with this complete archive of spidey's videogames through the years.</p>
+        <a href="#list" class="cta-button">Learn More</a>
         <a href="./html/news.html" target="_blank" class="cta-button">Contact</a>
       </div>
+    </section>
+
+    <section class="game-list-section">
+      <h2>List of Spider-Man Video Games by year:</h2>
+      <table class="game-list" id="list">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Release Year</th>
+            <th>Console</th>
+            <th>Developer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Spider-Man</td>
+            <td>1982</td>
+            <td>Atari 2600, Odyssey 2</td>
+            <td>Parker Brothers</td>
+          </tr>
+          <tr>
+            <td>Questprobe featuring Spider-Man</td>
+            <td>1984</td>
+            <td>Amstrad CPC, Apple II, C64, C16, Atari 8-bit, ZX Spectrum, IBM PC compatible</td>
+            <td>Adventure International</td>
+          </tr>
+          <tr>
+            <td>The Amazing Spider-Man and Captain America in Dr. Doom's Revenge!</td>
+            <td>1989</td>
+            <td>MS-DOS, Amiga, Atari ST, Amstrad CPC, ZX Spectrum, C-64</td>
+            <td>Paragon</td>
+          </tr>
+          <tr>
+            <td>The Revenge of Shinobi</td>
+            <td>1989</td>
+            <td>Genesis, Sega CD</td>
+            <td>Sega</td>
+          </tr>
+          <tr>
+            <td>The Amazing Spider-Man</td>
+            <td>1990</td>
+            <td>Amiga, MS-DOS, C-64, Atari ST</td>
+            <td>Oxford Digital Enterprises</td>
+          </tr>
+          <tr>
+            <td>The Amazing Spider-Man</td>
+            <td>1990</td>
+            <td>Game Boy</td>
+            <td>Rare</td>
+          </tr>
+          <tr>
+            <td>Spider-Man vs. The Kingpin</td>
+            <td>1990</td>
+            <td>Genesis, Master System, Game Gear, Sega CD</td>
+            <td>Technopop</td>
+          </tr>
+          <tr>
+            <td>The Punisher: The Ultimate Payback!</td>
+            <td>1991</td>
+            <td>Game Boy</td>
+            <td>Krome Studios Melbourne</td>
+          </tr>
+          <tr>
+            <td>Spider-Man: The Video Game</td>
+            <td>1991</td>
+            <td>Arcade</td>
+            <td>Sega</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man 2</td>
+            <td>1992</td>
+            <td>Game Boy</td>
+            <td>Bits Studios</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Return of the Sinister Six</td>
+            <td>1992</td>
+            <td>NES, Master System, Game Gear</td>
+            <td>LJN/Flying Edge</td>
+        </tr>
+        <tr>
+            <td>Spider-Man and the X-Men in Arcade&#39;s Revenge</td>
+            <td>1992</td>
+            <td>SNES, Genesis, Game Gear, Game Boy</td>
+            <td>Software Creations</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man 3: Invasion of the Spider-Slayers</td>
+            <td>1993</td>
+            <td>Game Boy</td>
+            <td>Bits Studios</td>
+        </tr>
+        <tr>
+            <td>Spider-Man and Venom: Maximum Carnage</td>
+            <td>1994</td>
+            <td>SNES, Genesis</td>
+            <td>Software Creations</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man: Lethal Foes</td>
+            <td>1995</td>
+            <td>SNES</td>
+            <td>Argent, Epoch</td>
+        </tr>
+        <tr>
+            <td>Venom/Spider-Man: Separation Anxiety</td>
+            <td>1995</td>
+            <td>SNES, Genesis</td>
+            <td>Software Creations</td>
+        </tr>
+        <tr>
+            <td>Spider-Man</td>
+            <td>1995</td>
+            <td>Western Technologies</td>
+            <td>LJN/Acclaim Entertainment</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man: Web of Fire</td>
+            <td>1996</td>
+            <td>32X</td>
+            <td>BlueSky Software</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: The Sinister Six</td>
+            <td>1996</td>
+            <td>MS-DOS</td>
+            <td>Brooklyn Multimedia</td>
+        </tr>
+        <tr>
+            <td>Spider-Man</td>
+            <td>2000</td>
+            <td>PlayStation, Game Boy Color, Nintendo 64, Dreamcast, Microsoft Windows</td>
+            <td>Neversoft / Vicarious Visions (GBC) / Edge of Reality (N64) / Treyarch (DC) / LTI Gray Matter (Win)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man 2: The Sinister Six</td>
+            <td>2001</td>
+            <td>Game Boy Color</td>
+            <td>Torus Games</td>
+        </tr>
+        <tr>
+            <td>Spider-Man 2: Enter Electro</td>
+            <td>2001</td>
+            <td>PlayStation</td>
+            <td>Vicarious Visions</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Mysterio&#39;s Menace</td>
+            <td>2001</td>
+            <td>Game Boy Advance</td>
+            <td>Vicarious Visions</td>
+        </tr>
+        <tr>
+            <td>Spider-Man</td>
+            <td>2002</td>
+            <td>Game Boy Advance, GameCube, Windows, PlayStation 2, Xbox</td>
+            <td>Treyarch / LTI Gray Matter (Win) / Digital Eclipse (GBA)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man 2</td>
+            <td>2004</td>
+            <td>Game Boy Advance, GameCube, Windows, PlayStation 2, Xbox, N-Gage, Mac OS X, Nintendo DS, PlayStation Portable</td>
+            <td>Treyarch / Digital Eclipse (GBA, NGE) / Foundation 9 Entertainment (Win) / Aspyr (Mac) / Vicarious Visions (DS, PSP)</td>
+        </tr>
+        <tr>
+            <td>Ultimate Spider-Man</td>
+            <td>2005</td>
+            <td>Game Boy Advance, GameCube, Windows, PlayStation 2, Xbox, Nintendo DS</td>
+            <td>Treyarch / Beenox (Win) / Vicarious Visions (DS, GBA)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Battle for New York</td>
+            <td>2006</td>
+            <td>Nintendo DS, Game Boy Advance, Mobile</td>
+            <td>Torus Games</td>
+        </tr>
+        <tr>
+            <td>Spider-Man 3</td>
+            <td>2007</td>
+            <td>Game Boy Advance, Windows, Nintendo DS, PlayStation 2, Wii, Xbox 360, PlayStation 3, PlayStation Portable</td>
+            <td>Vicarious Visions / Treyarch (X360, PS3) / Beenox (Win)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Friend or Foe</td>
+            <td>2007</td>
+            <td>Windows, Nintendo DS, PlayStation 2, Wii, Xbox 360, PlayStation Portable</td>
+            <td>Next Level Games / Beenox (Win) / Behaviour Interactive (DS, PSP)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Web of Shadows</td>
+            <td>2008</td>
+            <td>Windows, Nintendo DS, PlayStation 2, PlayStation 3, PlayStation Portable, Wii, Xbox 360</td>
+            <td>Shaba Games and Treyarch / Griptonite Games (DS) / Amaze Entertainment (PS2, PSP)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Toxic City</td>
+            <td>2009</td>
+            <td>Mobile</td>
+            <td>Gameloft</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Shattered Dimensions</td>
+            <td>2010</td>
+            <td>Nintendo DS, PlayStation 3, Wii, Xbox 360, Windows</td>
+            <td>Beenox / Griptonite Games (DS)</td>
+        </tr>
+        <tr>
+            <td>Spider-Man: Edge of Time</td>
+            <td>2011</td>
+            <td>Nintendo 3DS, Nintendo DS, PlayStation 3, Wii, Xbox 360</td>
+            <td>Beenox / Other Ocean Interactive (DS)</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man</td>
+            <td>2012</td>
+            <td>Nintendo 3DS, Nintendo DS, PlayStation 3, Wii, Xbox 360, Android, iOS, Windows, Mobile, Wii U, Windows Phone, PlayStation Vita</td>
+            <td>Beenox / Other Ocean Interactive (DS) / Gameloft (AND, iOS, MOB, WP) / Mercenary Technology (Vita)</td>
+        </tr>
+        <tr>
+            <td>Ultimate Spider-Man: Total Mayhem</td>
+            <td>2013</td>
+            <td>iOS, Android</td>
+            <td>Gameloft</td>
+        </tr>
+        <tr>
+            <td>Spider-Man Unlimited</td>
+            <td>2014</td>
+            <td>iOS, Android, Windows Phone</td>
+            <td>Gameloft</td>
+        </tr>
+        <tr>
+            <td>The Amazing Spider-Man 2</td>
+            <td>2014</td>
+            <td>Android, iOS, Windows, Nintendo 3DS, PlayStation 3, PlayStation 4, Wii U, Xbox 360, Xbox One</td>
+            <td>Beenox / Gameloft (AND, iOS) / High Voltage Software (3DS)</td>
+        </tr>
+        <tr>
+            <td>Marvel&#39;s Spider-Man</td>
+            <td>2018</td>
+            <td>PlayStation 4, PlayStation 5, Microsoft Windows</td>
+            <td>Insomniac Games</td>
+        </tr>
+        <tr>
+            <td>Marvel&#39;s Spider-Man: Miles Morales</td>
+            <td>2020</td>
+            <td>PlayStation 4, PlayStation 5, Microsoft Windows</td>
+            <td>Insomniac Games</td>
+        </tr>
+        <tr>
+            <td>Marvel&#39;s Spider-Man 2</td>
+            <td>2023</td>
+            <td>PlayStation 5</td>
+            <td>Insomniac Games</td>
+        </tr>
+        </tbody>
+      </table>
+    </section>
+    <section>
+      <h2>For more information head to it's <a href="http://https://en.wikipedia.org/wiki/List_of_video_games_featuring_Spider-Man" target="_blank" rel="noopener noreferrer">wikipedia page</a></h2>
     </section>
   </main>
   
