feature: add character section

--- a/html/characters.html
+++ b/html/characters.html
@@ -34,12 +34,82 @@
   <main>
     <section class="hero-section">
       <div class="hero-content">
-        <h2>Welcome to the Amazing World of Spider-Man!</h2>
-        <p>Explore the thrilling adventures of your friendly neighborhood hero.</p>
-        <a href="#info" class="cta-button">Learn More</a>
+        <h2>Our hero's friends and foes!</h2>
+        <p>Get to know spidey's most popular characters.</p>
+        <a href="#characters" class="cta-button">Learn More</a>
         <a href="./html/news.html" target="_blank" class="cta-button">Contact</a>
       </div>
     </section>
+
+    <section class="characters-section" id="characters">
+      <h2>Main Characters</h2>
+      <div class="characters-container">
+        <div class="character-card">
+          <img class="character-image" src="../img/spidey.jpg" alt="spiderman>
+          <h2 class="character-name">Spider-Man</h2>
+          <p class="character-summary">Peter Parker was bitten by a radioactive spider as a teenager, granting him spider-like powers. After the death of his Uncle Ben, Peter learned that "with great power, comes great responsibility." Swearing to always protect the innocent from harm, Peter Parker became Spider-Man.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/aunt-may.jpg" alt="aunt-may">
+          <h2 class="character-name">Aunt may</h2>
+          <p class="character-summary">Peter Parker's aunt-by-marriage and one of the most important people in his life.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/mary-jane.jpg" alt="mary-jane">
+          <h2 class="character-name">Mary Jane Watson</h2>
+          <p class="character-summary">Mary Jane Watson is an actress and a major love interest of Peter Parker aka Spider-Man. They have had a long and dramatic on-and-off-again relationship. She's one of the few people who know who he is and still supports him as a close friend and confidante.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/jonah-jameson.jpg" alt="jonah-jameson">
+          <h2 class="character-name">J Jonah Jameson</h2>
+          <p class="character-summary">J. Jonah Jameson is the former employer of Peter B. Parker and remains an aggravate of Spider-Man. He was once the chief editor and publisher of the Daily Bugle, a New York newspaper, and the mayor of New York before his resignation amidst scandal resulting from Superior Spider Man and the Goblin Nation. He now is a host of a show on the F.A.C.T. News Channel</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/robie-robertsonjpg.jpg" alt="robbie robertson">
+          <h2 class="character-name">Robbie Robertson</h2>
+          <p class="character-summary">Editor-in-Chief of the Daily Bugle, and perhaps the best friend to J. Jonah Jameson.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/harry-ossborn.jpg" alt="Harry Osborn">
+          <h2 class="character-name">Harry Osborn</h2>
+          <p class="character-summary">Harry Osborn is the best friend of Peter Parker, the Amazing Spider-Man. His father is Norman Osborn, a global industrialist and billionaire.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/norman-osborn.jpg" alt="norman-osborn">
+          <h2 class="character-name">Norman Osborn</h2>
+          <p class="character-summary">The amoral industrialist Norman Osborn was transformed by an experimental serum into the maniacal Green Goblin, and has endured over the decades as Spider-Man's most dreaded archenemy. Osborn is known for being the killer of Gwen Stacy, the architect of the Clone Saga, and the one-time director of S.H.I.E.L.D.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/flash-thompson.jpg" alt="flash-thompson">
+          <h2 class="character-name">Flash Thompson</h2>
+          <p class="character-summary">Flash frequently bullied Peter Parker but was actually Spider-Man's greatest fan. In time, Flash befriended Peter, became a decorated war hero, and eventually joined the Marvel superheroes as a symbiote host, first with Venom and then with Anti-Venom.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/betty-brantjpg.jpg" alt="betty-brant">
+          <h2 class="character-name">Betty Brant</h2>
+          <p class="character-summary">Betty Brant started as a personal secretary at the Daily Bugle and later became a top reporter. Betty is also one of the many love interests of Peter Parker and ex-girlfriend of Flash Thompson</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/gwen-stacy.jpg" alt="gwen-stacy">
+          <h2 class="character-name">Gwen Stacy</h2>
+          <p class="character-summary">Gwen Stacy was the first true love of Peter Parker. She's best known for her tragic death by being thrown off from the Brooklyn Bridge by the Green Goblin. The Earth-65 version is Spider-Gwen who is a major player in the Spider family.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/doctor-octopus.jpg" alt="doctor-octopus">
+          <h2 class="character-name">Doctor Octopus</h2>
+          <p class="character-summary">Doctor Octopus is a supervillain originating from Marvel Comics. A former nuclear physicist and atomic researcher, Otto Octavius' life changed forever when one of his experiments went horribly wrong involving his four mechanical appendages used to assist him in his experiments. From then on, Octavius soon after his initial encounter has become one of the most dangerous supervillains in the Marvel Universe.</p>
+        </div>
+        <div class="character-card">
+          <img class="character-image" src="../img/venom.jpg" alt="Venom">
+          <h2 class="character-name">Venom</h2>
+          <p class="character-summary">The Venom symbiote originally bonded with Peter Parker, AKA Spider-Man, during his adventure in the first Secret Wars on the Beyonder's planet called Battleworld. Initially, he thought the symbiote was just an attire. However, upon his discovery, he rejected it because he realized that it was sentient. Since then, the symbiote has bonded with several other hosts, including Eddie Brock, Angelo Fortunato, Flash Thompson, Ann Weying, and even Carol Danvers. Currently, its host is Eddie Brock.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>For more characters follow <a href="http://https://comicvine.gamespot.com/the-amazing-spider-man/4050-2127/characters/" target="_blank" rel="noopener noreferrer">this</a> link</h2>
+      </section>
   </main>
   
   <footer>
